--- a/src/persistence/Elsa.Persistence.EntityFramework/Elsa.Persistence.EntityFramework.DocumentDb/Elsa.Persistence.EntityFramework.DocumentDb.csproj
+++ b/src/persistence/Elsa.Persistence.EntityFramework/Elsa.Persistence.EntityFramework.DocumentDb/Elsa.Persistence.EntityFramework.DocumentDb.csproj
@@ -7,9 +7,9 @@
         <TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
         <Description>
             Elsa is a set of workflow libraries and tools that enable lean and mean workflowing capabilities in any .NET Core application.
-            This package provides Entity Framework Core migrations for the MySql database provider.
+            This package provides Entity Framework Core migrations for the CosmosDb/DocumentDb database provider.
         </Description>
-        <PackageTags>elsa, workflows, efcore, mysql, mariadb</PackageTags>
+        <PackageTags>elsa, workflows, efcore, cosmosdb, documentdb</PackageTags>
     </PropertyGroup>
 
     <ItemGroup>
