--- a/src/persistence/Elsa.Persistence.EntityFramework/Elsa.Persistence.EntityFramework.DocumentDb/Elsa.Persistence.EntityFramework.DocumentDb.csproj
+++ b/src/persistence/Elsa.Persistence.EntityFramework/Elsa.Persistence.EntityFramework.DocumentDb/Elsa.Persistence.EntityFramework.DocumentDb.csproj
@@ -5,6 +5,7 @@
 
     <PropertyGroup>
         <TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
+        <Version>2.4.0.2</Version>
         <Description>
             Elsa is a set of workflow libraries and tools that enable lean and mean workflowing capabilities in any .NET Core application.
             This package provides Entity Framework Core migrations for the CosmosDb/DocumentDb database provider.
