--- a/src/activities/Elsa.Activities.Temporal.Common/Elsa.Activities.Temporal.Common.csproj
+++ b/src/activities/Elsa.Activities.Temporal.Common/Elsa.Activities.Temporal.Common.csproj
@@ -4,6 +4,7 @@
     <Import Project="..\..\..\configureawait.props" />
 
     <PropertyGroup>
+        <Version>2.4.0.4</Version>
         <TargetFramework>netstandard2.1</TargetFramework>
         <Description>
             Elsa is a set of workflow libraries and tools that enable lean and mean workflowing capabilities in any .NET Core application.
