--- a/src/core/Elsa/Elsa.csproj
+++ b/src/core/Elsa/Elsa.csproj
@@ -4,6 +4,7 @@
     <Import Project="..\..\..\configureawait.props" />
     
     <PropertyGroup>
+        <Version>2.4.0.4</Version>
         <Description>
             Elsa is a set of workflow libraries and tools that enable lean and mean workflowing capabilities in any .NET Core application.
             This package references some of the most commonly used packages you are likely to use when working with Elsa.
